production/envoy/envoy.yaml
---
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 5000
static_resources:
  listeners:
    - name: frontend
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: alpine
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /api/
                          route:
                            cluster: apibackend
                        - match:
                            prefix: /nl/
                          route:
                            cluster: staticserver
                            regex_rewrite:
                              pattern:
                                google_re2:
                                  max_program_size: 100
                                regex: (.*)$
                              substitution: /static/public/
                        - match:
                            prefix: /signin
                          route:
                            cluster: staticserver
                            prefix_rewrite: /static/public/
                        - match:
                            prefix: /admin
                          route:
                            cluster: staticserver
                            regex_rewrite:
                              pattern:
                                google_re2:
                                  max_program_size: 100
                                regex: (.*)$
                              substitution: /static/public/
                        - match:
                            prefix: /
                          route:
                            cluster: staticserver
                            prefix_rewrite: /static/public/
  clusters:
    - name: apibackend
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: apibackend_1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: alpine-apibackend
                      port_value: 8001
    - name: staticserver
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: staticserver_1
        endpoints:
          - lb_endpoints:
              endpoint:
                address:
                  socket_address:
                    address: alpine-staticserver
                    port_value: 8003
